# partisia-lottery

./: docker-compose.yml  readme.md  ts-abi-codegen.sh
api/: .env.example  package.json
api/migrations/: 1745316992132-initial-config.js
api/src/app/: app.module.ts
api/src/lottery/: lottery.module.ts
api/src/lottery/controllers/: lottery.controller.ts
api/src/lottery/payloads/: CreateLottery.payload.ts  GetLotteriesPayload.ts
api/src/lottery/schemas/: lottery-entries.schema.ts  lottery.schema.ts
api/src/lottery/services/: lottery.service.ts
api/src/lottery/types/: OnChainLotteryContractState.ts
api/src/settings/: setting.module.ts
api/src/users/: user.module.ts
api/src/users/controllers/: user.controller.ts
api/src/utils/: LotteryApiGenerated.ts
contract-java-test/: .coverage-allowlist.txt  pom.xml
contract-java-test/src/test/java/: LotteryTest.java  LotteryTest.old.java
frontend/: components.json  index.html  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: ClaimPrizeForm.tsx  Confetti.tsx  CountdownTimer.tsx  CreateAccountForm.tsx  DrawLotteryForm.tsx  Footer.tsx  LoadingSpinner.tsx  LotteryCard.tsx  LotteryPreview.tsx  MPCExplanation.tsx  Pagination.tsx  PurchaseCreditsForm.tsx  PurchaseTicket.tsx  RedeemCreditsForm.tsx
frontend/src/components/cards/: LotteryCard.tsx
frontend/src/components/create-lottery/: CreateLotteryForm.tsx  CreateLotteryPreview.tsx  CreateLotterySuccess.tsx
frontend/src/components/nav/: index.tsx  nav-wallet-item.tsx
frontend/src/components/ui/: Spinner.tsx  dialog.tsx
frontend/src/hooks/: useClaimPrize.ts  useCreateAccount.ts  useCreditsBalance.ts  useDrawLottery.ts  useEnterLottery.ts  useGetLotteryAccount.ts  useGetMyAccountKey.ts  useGetUserEntries.ts  useGetUserStats.ts  useHasAccountOnChain.ts  usePurchaseCredits.ts  usePurchaseTickets.ts  useRedeemCredits.ts
frontend/src/lib/: LotteryApi.ts  LotteryApiGenerated.ts  LotteryContext.tsx  TestTokenApi.ts  TestTokenGenerated.ts  ZKFileShareApi.ts
frontend/src/pages/: ZkFileUploadPage.tsx  auth-page-wrapper.tsx
frontend/src/pages/create-lottery/: index.tsx
frontend/src/types/: index.ts
frontend/src/utils/: mockData.ts  status.ts
rust/: Cargo.toml
rust/common/: Cargo.toml
rust/common/src/: lib.rs  token_state.rs
rust/lottery/: Cargo.toml
rust/lottery/src/: lib.old.rs  lib.rs  lottery.rs  mpc_20.rs  types.old.rs  types.rs  zk_compute.old.rs  zk_compute.rs
rust/mpc20/: Cargo.toml
rust/mpc20/src/: lib.rs
(+7 files in other folders)
